# kat-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.ps1
docs/: index.html  search-index.js
docs/doc/: index.html  settings.html
docs/doc/kat/de/: fn.from_array.html  fn.from_f64.html  fn.from_i64.html  index.html
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Unpin.js
docs/implementors/kat/: trait.__Deserialize.js
docs/kat/: all.html  macro.__generate_impl_deserialize!.html  macro.impl_deserialize_from_deserializable!.html  macro.impl_deserialize_from_deserializable.html  macro.impl_deserialize_from_toml_bool.html  macro.impl_deserialize_from_toml_date!.html  macro.impl_deserialize_from_toml_date.html  macro.impl_deserialize_from_toml_int!.html  macro.impl_deserialize_from_toml_int.html  macro.impl_deserialize_from_toml_string.html  macro.kat_cfg!.html  macro.kat_cfg.html  macro.run.html  macro.test.html
docs/kat/de/: derive.__DeriveDeserialize.html  fn.from_bool.html  trait.__Deserializer.html
docs/kat/de/types/: index.html  struct.TomlArray.html  type.TomlString.html
docs/kat/types/: index.html  type.TomlBool.html  type.TomlFloat.html  type.TomlInt.html  type.TomlString.html
docs/src/kat/: lib.rs.html
scripts/: doc_watch.ps1  release_docs.ps1
src/: de.rs  lib.rs
tests/: test_add_table_section.rs  test_custom_de_struct.rs  test_data.rs  test_de_all_types.rs  test_no_data.rs
tests/data/: data.toml  data_add_table_section.toml  data_custom_de_struct.toml  data_de_all_types.toml  no_data.toml
